[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mouse/Mouse.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Recycling/RecycleBin.tscn" type="PackedScene" id=3]
[ext_resource path="res://background.jpg" type="Texture" id=4]
[ext_resource path="res://taskbar.png" type="Texture" id=5]
[ext_resource path="res://Theme.tres" type="Theme" id=6]
[ext_resource path="res://Discord.tscn" type="PackedScene" id=7]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Mouse" parent="." instance=ExtResource( 1 )]
position = Vector2( 179, 107 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="RecycleBin" parent="." instance=ExtResource( 3 )]
position = Vector2( 182, 216 )

[node name="Warning" type="Label" parent="RecycleBin"]
visible = false
margin_left = 154.0
margin_top = -72.0
margin_right = 831.0
margin_bottom = 143.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "<- Recycle bin is getting full"
autowrap = true

[node name="Taskbar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
color = Color( 0.145098, 0.152941, 0.176471, 1 )

[node name="Taskbar" type="Sprite" parent="Taskbar"]
position = Vector2( 510, 35 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 5 )

[node name="Discord" parent="." instance=ExtResource( 7 )]

[connection signal="swiped" from="Mouse" to="." method="_on_Mouse_swiped"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
